--- a/notebooks/LevelsOfActivity.ipynb
+++ b/notebooks/LevelsOfActivity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataEvents = pd.read_csv('/Users/pedroantonio/Desktop/data/anonymized_dataset.csv', sep=\";\")"
+    "dataEvents = pd.read_csv('/Users/pedroantonio/Desktop/anonamyze_all_data_collection.csv', sep=\";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -77,43 +77,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>15246dfc4342ffe2601e4ecee9017eea</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>1. One Box</td>\n",
-       "      <td>n_event</td>\n",
-       "      <td>16.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>15246dfc4342ffe2601e4ecee9017eea</td>\n",
-       "      <td>2. Separated Boxes</td>\n",
        "      <td>n_event</td>\n",
        "      <td>18.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
+       "      <td>2. Separated Boxes</td>\n",
+       "      <td>n_event</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>15246dfc4342ffe2601e4ecee9017eea</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>3. Rotate a Pyramid</td>\n",
        "      <td>n_event</td>\n",
-       "      <td>26.0</td>\n",
+       "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>15246dfc4342ffe2601e4ecee9017eea</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>4. Match Silhouettes</td>\n",
        "      <td>n_event</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>173.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>15246dfc4342ffe2601e4ecee9017eea</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
+       "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>5. Removing Objects</td>\n",
        "      <td>n_event</td>\n",
-       "      <td>24.0</td>\n",
+       "      <td>38.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -124,81 +124,81 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>991</td>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>d1b81842e7f52c7e4bfee0b60735bdf1</td>\n",
+       "      <td>56191</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
        "      <td>Sugar Cones</td>\n",
        "      <td>redo_action</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>992</td>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>d1b81842e7f52c7e4bfee0b60735bdf1</td>\n",
+       "      <td>56192</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
        "      <td>Tall and Small</td>\n",
        "      <td>redo_action</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>993</td>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>d1b81842e7f52c7e4bfee0b60735bdf1</td>\n",
+       "      <td>56193</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
        "      <td>Unnecessary</td>\n",
        "      <td>redo_action</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>994</td>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>d1b81842e7f52c7e4bfee0b60735bdf1</td>\n",
+       "      <td>56194</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
        "      <td>Warm Up</td>\n",
        "      <td>redo_action</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>995</td>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>d1b81842e7f52c7e4bfee0b60735bdf1</td>\n",
+       "      <td>56195</td>\n",
+       "      <td>e6af7d42084352a39449e6d0a09b18cd</td>\n",
+       "      <td>ffa946ca09448817699cabbb3dd78d56</td>\n",
        "      <td>Zzz</td>\n",
        "      <td>redo_action</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>996 rows × 5 columns</p>\n",
+       "<p>56196 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                group                              user  \\\n",
-       "0    95cd1f045a0329cf5595ae734ae7ae43  15246dfc4342ffe2601e4ecee9017eea   \n",
-       "1    95cd1f045a0329cf5595ae734ae7ae43  15246dfc4342ffe2601e4ecee9017eea   \n",
-       "2    95cd1f045a0329cf5595ae734ae7ae43  15246dfc4342ffe2601e4ecee9017eea   \n",
-       "3    95cd1f045a0329cf5595ae734ae7ae43  15246dfc4342ffe2601e4ecee9017eea   \n",
-       "4    95cd1f045a0329cf5595ae734ae7ae43  15246dfc4342ffe2601e4ecee9017eea   \n",
-       "..                                ...                               ...   \n",
-       "991  95cd1f045a0329cf5595ae734ae7ae43  d1b81842e7f52c7e4bfee0b60735bdf1   \n",
-       "992  95cd1f045a0329cf5595ae734ae7ae43  d1b81842e7f52c7e4bfee0b60735bdf1   \n",
-       "993  95cd1f045a0329cf5595ae734ae7ae43  d1b81842e7f52c7e4bfee0b60735bdf1   \n",
-       "994  95cd1f045a0329cf5595ae734ae7ae43  d1b81842e7f52c7e4bfee0b60735bdf1   \n",
-       "995  95cd1f045a0329cf5595ae734ae7ae43  d1b81842e7f52c7e4bfee0b60735bdf1   \n",
+       "                                  group                              user  \\\n",
+       "0      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "1      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "2      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "3      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "4      4fe25833f555e9903d2bb6bbeec3fbfb  0157bc278747755031338f18c5ba4233   \n",
+       "...                                 ...                               ...   \n",
+       "56191  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "56192  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "56193  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "56194  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
+       "56195  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
        "\n",
-       "                  task_id       metric  value  \n",
-       "0              1. One Box      n_event   16.0  \n",
-       "1      2. Separated Boxes      n_event   18.0  \n",
-       "2     3. Rotate a Pyramid      n_event   26.0  \n",
-       "3    4. Match Silhouettes      n_event    9.0  \n",
-       "4     5. Removing Objects      n_event   24.0  \n",
-       "..                    ...          ...    ...  \n",
-       "991           Sugar Cones  redo_action    0.0  \n",
-       "992        Tall and Small  redo_action    0.0  \n",
-       "993           Unnecessary  redo_action    0.0  \n",
-       "994               Warm Up  redo_action    0.0  \n",
-       "995                   Zzz  redo_action    0.0  \n",
+       "                    task_id       metric  value  \n",
+       "0                1. One Box      n_event   18.0  \n",
+       "1        2. Separated Boxes      n_event   28.0  \n",
+       "2       3. Rotate a Pyramid      n_event   12.0  \n",
+       "3      4. Match Silhouettes      n_event  173.0  \n",
+       "4       5. Removing Objects      n_event   38.0  \n",
+       "...                     ...          ...    ...  \n",
+       "56191           Sugar Cones  redo_action    0.0  \n",
+       "56192        Tall and Small  redo_action    0.0  \n",
+       "56193           Unnecessary  redo_action    0.0  \n",
+       "56194               Warm Up  redo_action    0.0  \n",
+       "56195                   Zzz  redo_action    0.0  \n",
        "\n",
-       "[996 rows x 5 columns]"
+       "[56196 rows x 5 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,8 @@
     "                    eventsDiff_puzzle[user_puzzle_key].append(event['type'])\n",
     "                    \n",
     "            # the event is not final event\n",
-    "            if(event['type'] not in ['ws-exit_to_menu', 'ws-puzzle_complete', 'ws-create_user']): \n",
+    "            if(event['type'] not in ['ws-exit_to_menu', 'ws-puzzle_complete', 'ws-create_user', 'ws-login_user']): \n",
+    "                                                       \n",
     "                    puzzleEvents[user_puzzle_key] += 1\n",
     "                                                                                              \n",
     "                    #add the event type                                                                          \n",
