--- a/notebooks/LevelsOfActivity.ipynb
+++ b/notebooks/LevelsOfActivity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "levelsOfActivity = computeLevelsOfActivity2(dataEvents)"
+    "levelsOfActivity = computeLevelsOfActivity(dataEvents)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -80,7 +80,7 @@
        "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
        "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>1. One Box</td>\n",
-       "      <td>n_event</td>\n",
+       "      <td>event</td>\n",
        "      <td>18.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -88,7 +88,7 @@
        "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
        "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>2. Separated Boxes</td>\n",
-       "      <td>n_event</td>\n",
+       "      <td>event</td>\n",
        "      <td>28.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -96,7 +96,7 @@
        "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
        "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>3. Rotate a Pyramid</td>\n",
-       "      <td>n_event</td>\n",
+       "      <td>event</td>\n",
        "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -104,7 +104,7 @@
        "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
        "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>4. Match Silhouettes</td>\n",
-       "      <td>n_event</td>\n",
+       "      <td>event</td>\n",
        "      <td>173.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -112,7 +112,7 @@
        "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
        "      <td>0157bc278747755031338f18c5ba4233</td>\n",
        "      <td>5. Removing Objects</td>\n",
-       "      <td>n_event</td>\n",
+       "      <td>event</td>\n",
        "      <td>38.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -183,11 +183,11 @@
        "56195  e6af7d42084352a39449e6d0a09b18cd  ffa946ca09448817699cabbb3dd78d56   \n",
        "\n",
        "                    task_id       metric  value  \n",
-       "0                1. One Box      n_event   18.0  \n",
-       "1        2. Separated Boxes      n_event   28.0  \n",
-       "2       3. Rotate a Pyramid      n_event   12.0  \n",
-       "3      4. Match Silhouettes      n_event  173.0  \n",
-       "4       5. Removing Objects      n_event   38.0  \n",
+       "0                1. One Box        event   18.0  \n",
+       "1        2. Separated Boxes        event   28.0  \n",
+       "2       3. Rotate a Pyramid        event   12.0  \n",
+       "3      4. Match Silhouettes        event  173.0  \n",
+       "4       5. Removing Objects        event   38.0  \n",
        "...                     ...          ...    ...  \n",
        "56191           Sugar Cones  redo_action    0.0  \n",
        "56192        Tall and Small  redo_action    0.0  \n",
@@ -198,7 +198,7 @@
        "[56196 rows x 5 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,99 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def computeLevelsOfActivity(dataEvents, group = 'all'):\n",
-    "    dataEvents['time'] = pd.to_datetime(dataEvents['time'])\n",
-    "    dataEvents = dataEvents.sort_values('time')\n",
-    "    \n",
-    "    #iterates in the groups and users of the data\n",
-    "    dataEvents['group'] = [json.loads(x)['group'] if 'group' in json.loads(x).keys() else '' for x in dataEvents['data']]\n",
-    "    dataEvents['user'] = [json.loads(x)['user'] if 'user' in json.loads(x).keys() else '' for x in dataEvents['data']]\n",
-    "    \n",
-    "    # removing those rows where we dont have a group and a user that is not guest\n",
-    "    dataEvents = dataEvents[((dataEvents['group'] != '') & (dataEvents['user'] != '') & (dataEvents['user'] != 'guest'))]\n",
-    "    dataEvents['group_user_id'] = dataEvents['group'] + '~' + dataEvents['user']\n",
-    "    \n",
-    "    # filtering to only take the group passed as argument\n",
-    "    if(group != 'all'):\n",
-    "        dataEvents = dataEvents[dataEvents['group'].isin(group)]\n",
-    "    \n",
-    "    activity_by_user = dataEvents.groupby(['group_user_id','group', 'user']).agg({'id':'count',\n",
-    "                                             'type':'nunique'}).reset_index().rename(columns={'id':'n_events',\n",
-    "                                                                                              'type':'n_different_events'})\n",
-    "    activity_by_user.index = activity_by_user['group_user_id'].values\n",
-    "    \n",
-    "    activity_by_user['active_time'] = np.nan\n",
-    "    activity_by_user['n_completed_puzzles'] = np.nan\n",
-    "    \n",
-    "    completedPuzzles = dict()   \n",
-    "    for user in activity_by_user['group_user_id'].unique():\n",
-    "        user_events = dataEvents[dataEvents['group_user_id'] == user]\n",
-    "        completedPuzzles[user] = set()\n",
-    "\n",
-    "        # Computing active time\n",
-    "        previousEvent = None\n",
-    "        theresHoldActivity = 60 # np.percentile(allDifferences, 98) is 10 seconds\n",
-    "        activeTime = []\n",
-    "\n",
-    "        for enum, event in user_events.iterrows():\n",
-    "            # If it is the first event\n",
-    "            if(previousEvent is None):\n",
-    "                previousEvent = event\n",
-    "                continue\n",
-    "\n",
-    "            if(event['type'] == 'ws-puzzle_complete'):\n",
-    "                # adding key of the completed puzzle\n",
-    "                completedPuzzles[user].add(json.loads(event['data'])['task_id']) \n",
-    "\n",
-    "            delta_seconds = (event['time'] - previousEvent['time']).total_seconds()\n",
-    "            if((delta_seconds < theresHoldActivity)):\n",
-    "                activeTime.append(delta_seconds)\n",
-    "\n",
-    "            previousEvent = event\n",
-    "\n",
-    "        activity_by_user.at[user, 'active_time'] = round(np.sum(activeTime)/60,2)\n",
-    "        activity_by_user.at[user, 'n_completed_puzzles'] = len(completedPuzzles[user])\n",
-    "        \n",
-    "    activity_by_user.drop(columns=['group_user_id'], inplace=True)\n",
-    "    activity_by_user = pd.melt(activity_by_user, id_vars=['group', 'user'], \n",
-    "        value_vars=['n_events', 'n_different_events', 'active_time', 'n_completed_puzzles'], \n",
-    "        var_name='metric', value_name='value')\n",
-    "    \n",
-    "    return activity_by_user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def computeLevelsOfActivity2(dataEvents, group = 'all'):\n",
     "    dataEvents['time'] = pd.to_datetime(dataEvents['time'])\n",
     "    dataEvents = dataEvents.sort_values('time')\n",
     "    \n",
@@ -322,15 +234,15 @@
     "          \n",
     "    # the data is grouped by the necessary variables      \n",
     "    activity_by_user = dataEvents.groupby(['group_user_id','group', 'user','group_user_task_id','task_id']).agg({'id':'count',\n",
-    "                                             'type':'nunique'}).reset_index().rename(columns={'id':'n_events',\n",
-    "                                                                                              'type':'n_different_events'}) \n",
+    "                                             'type':'nunique'}).reset_index().rename(columns={'id':'events',\n",
+    "                                                                                              'type':'different_events'}) \n",
     "    \n",
     "    #indicate the index variable                                                                                                                                                               \n",
     "    activity_by_user.index = activity_by_user['group_user_task_id'].values\n",
     "                                                                                              \n",
     "    #initialize the metrics                                                                                          \n",
-    "    activity_by_user['n_event'] = np.nan\n",
-    "    activity_by_user['n_different_events'] = np.nan\n",
+    "    activity_by_user['event'] = np.nan\n",
+    "    activity_by_user['different_events'] = np.nan\n",
     "    activity_by_user['active_time'] = np.nan\n",
     "    activity_by_user['snapshot'] = 0\n",
     "    activity_by_user['paint'] = 0\n",
@@ -447,8 +359,8 @@
     "    for i in dataEvents['group_user_task_id'].unique():\n",
     "        key_split = i.split('~')\n",
     "        if(key_split[2] != ''):\n",
-    "            activity_by_user.at[i, 'n_event'] = puzzleEvents[i]\n",
-    "            activity_by_user.at[i, 'n_different_events'] = len(set(eventsDiff_puzzle[i]))\n",
+    "            activity_by_user.at[i, 'event'] = puzzleEvents[i]\n",
+    "            activity_by_user.at[i, 'different_events'] = len(set(eventsDiff_puzzle[i]))\n",
     "            activity_by_user.at[i, 'active_time'] = timePuzzle[i]\n",
     "            activity_by_user.at[i, 'snapshot'] = globalTypesEvents[i]['ws-snapshot']\n",
     "            activity_by_user.at[i, 'paint'] = globalTypesEvents[i]['ws-paint']\n",
@@ -469,7 +381,7 @@
     "    \n",
     "    #data output preparation                                                                                          \n",
     "    activity_by_user = pd.melt(activity_by_user, id_vars=['group', 'user','task_id'], \n",
-    "        value_vars=['n_event','n_different_events', 'active_time','snapshot','paint','rotate_view','move_shape','scale_shape','create_shape','delete_shape','undo_action','redo_action'], \n",
+    "        value_vars=['event','different_events', 'active_time','snapshot','paint','rotate_view','move_shape','scale_shape','create_shape','delete_shape','undo_action','redo_action'], \n",
     "        var_name='metric', value_name='value')\n",
     "        \n",
     "    return activity_by_user\n",
