Update levels and sequence

--- a/notebooks/levelsOfDifficulty.ipynb
+++ b/notebooks/levelsOfDifficulty.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataEvents = pd.read_csv('/Users/manuelgomezmoratilla/Desktop/TFG/data_processing_scripts/data/anonamyze_all_data_collection.csv', sep=\";\")"
+    "dataEvents = pd.read_csv('/Users/manuelgomezmoratilla/Desktop/TFG/data_processing_scripts/data/anonamyze_all_data_collection_v2.csv', sep=\";\")"
    ]
   },
   {
@@ -30,6 +30,8 @@
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
     "from collections import OrderedDict\n",
+    "\n",
+    "pd.options.mode.chained_assignment = None  # default='warn'\n",
     "    \n",
     "listActionEvents = ['ws-move_shape', 'ws-rotate_shape', 'ws-scale_shape', \n",
     "                    'ws-check_solution', 'ws-undo_action', 'ws-redo_action',\n",
@@ -49,13 +51,13 @@
     "def levelsOfDifficulty(dataEvents, group = 'all'):    \n",
     "    \n",
     "    dataEvents['group'] = [json.loads(x)['group'] if 'group' in json.loads(x).keys() else '' for x in dataEvents['data']]\n",
+    "    dataEvents['user'] = [json.loads(x)['user'] if 'user' in json.loads(x).keys() else '' for x in dataEvents['data']]\n",
+    "    # removing those rows where we dont have a group and a user that is not guest\n",
+    "    dataEvents = dataEvents[((dataEvents['group'] != '') & (dataEvents['user'] != '') & (dataEvents['user'] != 'guest'))]\n",
+    "    dataEvents['group_user_id'] = dataEvents['group'] + '~' + dataEvents['user']\n",
     "    # filtering to only take the group passed as argument\n",
     "    if(group != 'all'):\n",
     "        dataEvents = dataEvents[dataEvents['group'].isin(group)]\n",
-    "    \n",
-    "    all_data_by_user = dataEvents.groupby(['session_id']).agg({'id':'count',\n",
-    "                                                         'type':'nunique'}).reset_index().rename(columns={'id':'n_events',\n",
-    "                                                                                                          'type':'n_different_events'})\n",
     "\n",
     "    # Data Cleaning\n",
     "    dataEvents['time'] = pd.to_datetime(dataEvents['time'])\n",
@@ -66,9 +68,9 @@
     "    userPuzzleDict = {}\n",
     "    theresHoldActivity = 60\n",
     "    \n",
-    "    for user in all_data_by_user['session_id'].unique():\n",
+    "    for user in dataEvents['group_user_id'].unique():\n",
     "        #Select rows\n",
-    "        user_events = dataEvents[dataEvents['session_id'] == user]\n",
+    "        user_events = dataEvents[dataEvents['group_user_id'] == user]\n",
     "        userPuzzleDict[user] = {}\n",
     "        # Analyze when a puzzle has been started\n",
     "        activePuzzle = None\n",
@@ -139,7 +141,9 @@
     "    stats_by_level_player = []\n",
     "    for user in userPuzzleDict.keys():\n",
     "        userDf = pd.DataFrame.from_dict(userPuzzleDict[user], orient = 'index')\n",
-    "        userDf['session_id'] = user\n",
+    "        userDf['group_user_id'] = user\n",
+    "        key_split = user.split('~')\n",
+    "        userDf['group'] = key_split[1] \n",
     "        if (userDf.shape != 0):\n",
     "            stats_by_level_player.append(userDf)\n",
     "        else: \n",
@@ -154,14 +158,14 @@
     "        stats_by_level_player['p_incorrect'] = 100-100*(stats_by_level_player['completed']/stats_by_level_player['n_attempts'])\n",
     "        stats_by_level_player['n_abandoned'] = 1 - stats_by_level_player['completed']\n",
     "\n",
-    "        stats_by_level = round(stats_by_level_player.groupby(['puzzle', 'order', 'level_type']).agg({'active_time': 'mean',\n",
+    "        stats_by_level = round(stats_by_level_player.groupby(['puzzle', 'order', 'level_type', 'group']).agg({'active_time': 'mean',\n",
     "                                                    'n_attempts': 'mean',\n",
     "                                                    'n_actions': 'mean',\n",
     "                                                    'p_incorrect': 'mean',\n",
     "                                                    'completed': 'sum',\n",
-    "                                                    'session_id':'count',\n",
+    "                                                    'group_user_id':'count',\n",
     "                                                    'n_abandoned': 'sum'}).reset_index(),2).sort_values('order').rename(columns = {'completed': 'n_completed',\n",
-    "                                                                                                                                   'session_id': 'n_started', 'puzzle': 'task_id'})\n",
+    "                                                                                                                                   'group_user_id': 'n_started', 'puzzle': 'task_id'})\n",
     "        stats_by_level['p_abandoned'] = round(100*stats_by_level['n_abandoned']/stats_by_level['n_started'],2)\n",
     "        #Amount of time / #puzzles completed\n",
     "        stats_by_level['completed_time'] = round(stats_by_level['active_time']/stats_by_level['n_completed'],4)\n",
@@ -184,7 +188,7 @@
     "        #Normalize between 0 and 1\n",
     "        stats_by_level['norm_all_measures'] = (stats_by_level['z_all_measures']-stats_by_level['z_all_measures'].min())/(stats_by_level['z_all_measures'].max()-stats_by_level['z_all_measures'].min())\n",
     "\n",
-    "        difficulty_metrics = pd.DataFrame(stats_by_level, columns = ['task_id','order','completed_time', 'actions_completed', 'p_incorrect', 'p_abandoned', 'norm_all_measures'])\n",
+    "        difficulty_metrics = pd.DataFrame(stats_by_level, columns = ['group','task_id','order','completed_time', 'actions_completed', 'p_incorrect', 'p_abandoned', 'norm_all_measures'])\n",
     "        return difficulty_metrics\n",
     "    except ValueError:\n",
     "        return -1\n",
@@ -198,24 +202,202 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No existing data for specified group(s)\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>group</th>\n",
+       "      <th>task_id</th>\n",
+       "      <th>order</th>\n",
+       "      <th>completed_time</th>\n",
+       "      <th>actions_completed</th>\n",
+       "      <th>p_incorrect</th>\n",
+       "      <th>p_abandoned</th>\n",
+       "      <th>norm_all_measures</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>00f86c5fc28e8d326cdae17ea97c7387</td>\n",
+       "      <td>1. One Box</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>173</td>\n",
+       "      <td>a8d110698c69055de0f594ab2956dde2</td>\n",
+       "      <td>1. One Box</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>174</td>\n",
+       "      <td>a9381a5d6b310e58bb06df10c0a8bcfa</td>\n",
+       "      <td>1. One Box</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>175</td>\n",
+       "      <td>a9eac4d5476d2f20a263becdc89ca829</td>\n",
+       "      <td>1. One Box</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>176</td>\n",
+       "      <td>ab8c358afd1e639192d0abb1c5c0c9cb</td>\n",
+       "      <td>1. One Box</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2495</td>\n",
+       "      <td>b7b6a911ecb48add616af2d2546f77de</td>\n",
+       "      <td>Bear Market</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2496</td>\n",
+       "      <td>b8f38a202d7b62fad5756326e758ab2b</td>\n",
+       "      <td>Bear Market</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2497</td>\n",
+       "      <td>bac28f12fa9332df145bc5950d29c5d4</td>\n",
+       "      <td>Bear Market</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2488</td>\n",
+       "      <td>a6f176cf29c7a3e3bf3fc3c2362ac8c8</td>\n",
+       "      <td>Bear Market</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2460</td>\n",
+       "      <td>5724b11c82858d1aa6e80f800fda71df</td>\n",
+       "      <td>Bear Market</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4388 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 group      task_id  order  completed_time  \\\n",
+       "0     00f86c5fc28e8d326cdae17ea97c7387   1. One Box    1.0            0.37   \n",
+       "173   a8d110698c69055de0f594ab2956dde2   1. One Box    1.0            1.13   \n",
+       "174   a9381a5d6b310e58bb06df10c0a8bcfa   1. One Box    1.0            0.53   \n",
+       "175   a9eac4d5476d2f20a263becdc89ca829   1. One Box    1.0            0.27   \n",
+       "176   ab8c358afd1e639192d0abb1c5c0c9cb   1. One Box    1.0            0.43   \n",
+       "...                                ...          ...    ...             ...   \n",
+       "2495  b7b6a911ecb48add616af2d2546f77de  Bear Market   30.0             inf   \n",
+       "2496  b8f38a202d7b62fad5756326e758ab2b  Bear Market   30.0             NaN   \n",
+       "2497  bac28f12fa9332df145bc5950d29c5d4  Bear Market   30.0             inf   \n",
+       "2488  a6f176cf29c7a3e3bf3fc3c2362ac8c8  Bear Market   30.0             inf   \n",
+       "2460  5724b11c82858d1aa6e80f800fda71df  Bear Market   30.0             inf   \n",
+       "\n",
+       "      actions_completed  p_incorrect  p_abandoned  norm_all_measures  \n",
+       "0                   7.0          0.0          0.0                0.0  \n",
+       "173                34.0          0.0          0.0                0.0  \n",
+       "174                 3.0          0.0          0.0                0.0  \n",
+       "175                 3.0          0.0          0.0                0.0  \n",
+       "176                 3.0          0.0          0.0                0.0  \n",
+       "...                 ...          ...          ...                ...  \n",
+       "2495                inf        100.0        100.0                1.0  \n",
+       "2496                NaN        100.0        100.0                1.0  \n",
+       "2497                inf        100.0        100.0                1.0  \n",
+       "2488                inf        100.0        100.0                1.0  \n",
+       "2460                inf        100.0        100.0                1.0  \n",
+       "\n",
+       "[4388 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pruebas = levelsOfDifficulty(dataEvents, group = ['videotutorial'])\n",
+    "pruebas = levelsOfDifficulty(dataEvents, group = 'all')\n",
     "pruebas"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
