--- a/notebooks/levelsOfDifficulty.ipynb
+++ b/notebooks/levelsOfDifficulty.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,9 @@
     "                'Sugar Cones': 19,'Stranger Shapes': 20, 'Tall and Small': 21, 'Ramp Up and Can It': 22, 'More Than Meets Your Eye': 23, 'Not Bird': 24, 'Unnecesary': 25, 'Zzz': 26, 'Bull Market': 27, 'Few Clues': 28, 'Orange Dance': 29, 'Bear Market': 30}\n",
     "\n",
     "# mapping to positions\n",
-    "typeMapping = {'Sandbox': 'SAND', '1. One Box': 'Tutorial', '2. Separated Boxes': 'Tutorial', '3. Rotate a Pyramid': 'Tutorial', '4. Match Silhouettes': 'Tutorial', '5. Removing Objects': 'Tutorial', '6. Stretch a Ramp': 'Tutorial', '7. Max 2 Boxes': 'Tutorial', '8. Combine 2 Ramps': 'Tutorial', '9. Scaling Round Objects': 'Tutorial', \n",
-    "               'Square Cross-Sections': 'Easy Puzzles', 'Bird Fez': 'Easy Puzzles', 'Pi Henge': 'Easy Puzzles', '45-Degree Rotations': 'Easy Puzzles',  'Pyramids are Strange': 'Easy Puzzles', 'Boxes Obscure Spheres': 'Easy Puzzles', 'Object Limits': 'Easy Puzzles', 'Not Bird': 'Easy Puzzles', 'Angled Silhouette': 'Easy Puzzles',\n",
-    "               'Warm Up': 'Hard Puzzles', 'Stranger Shapes': 'Hard Puzzles', 'Sugar Cones': 'Hard Puzzles', 'Tall and Small': 'Hard Puzzles', 'Ramp Up and Can It': 'Hard Puzzles', 'More Than Meets Your Eye': 'Hard Puzzles', 'Unnecessary': 'Hard Puzzles', 'Zzz': 'Hard Puzzles', 'Bull Market': 'Hard Puzzles', 'Few Clues': 'Hard Puzzles', 'Orange Dance': 'Hard Puzzles', 'Bear Market': 'Hard Puzzles'}\n",
+    "typeMapping = {'Sandbox': 'SAND', '1. One Box': 'Basic Puzzles', '2. Separated Boxes': 'Basic Puzzles', '3. Rotate a Pyramid': 'Basic Puzzles', '4. Match Silhouettes': 'Basic Puzzles', '5. Removing Objects': 'Basic Puzzles', '6. Stretch a Ramp': 'Basic Puzzles', '7. Max 2 Boxes': 'Basic Puzzles', '8. Combine 2 Ramps': 'Basic Puzzles', '9. Scaling Round Objects': 'Basic Puzzles', \n",
+    "               'Square Cross-Sections': 'Intermediate Puzzles', 'Bird Fez': 'Intermediate Puzzles', 'Pi Henge': 'Intermediate Puzzles', '45-Degree Rotations': 'Intermediate Puzzles',  'Pyramids are Strange': 'Intermediate Puzzles', 'Boxes Obscure Spheres': 'Intermediate Puzzles', 'Object Limits': 'Intermediate Puzzles', 'Tetromino': 'Intermediate Puzzles', 'Angled Silhouette': 'Intermediate Puzzles',\n",
+    "               'Sugar Cones': 'Advanced Puzzles', 'Stranger Shapes': 'Advanced Puzzles', 'Tall and Small': 'Advanced Puzzles', 'Ramp Up and Can It': 'Advanced Puzzles', 'More Than Meets Your Eye': 'Advanced Puzzles', 'Not Bird': 'Advanced Puzzles', 'Unnecessary': 'Advanced Puzzles', 'Zzz': 'Advanced Puzzles', 'Bull Market': 'Advanced Puzzles', 'Few Clues': 'Advanced Puzzles', 'Orange Dance': 'Advanced Puzzles', 'Bear Market': 'Advanced Puzzles'}\n",
     "\n",
     "    \n",
     "def levelsOfDifficulty(dataEvents, group = 'all'):    \n",
@@ -143,7 +143,7 @@
     "        userDf = pd.DataFrame.from_dict(userPuzzleDict[user], orient = 'index')\n",
     "        userDf['group_user_id'] = user\n",
     "        key_split = user.split('~')\n",
-    "        userDf['group'] = key_split[1] \n",
+    "        userDf['group'] = key_split[0] \n",
     "        if (userDf.shape != 0):\n",
     "            stats_by_level_player.append(userDf)\n",
     "        else: \n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -235,58 +235,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>00f86c5fc28e8d326cdae17ea97c7387</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
        "      <td>1. One Box</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.37</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.0364</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>5.71</td>\n",
+       "      <td>0.026163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>173</td>\n",
-       "      <td>a8d110698c69055de0f594ab2956dde2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7a01ab37bd2729626dcaf96166390315</td>\n",
        "      <td>1. One Box</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.13</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.0211</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>4.32</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.023406</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>174</td>\n",
-       "      <td>a9381a5d6b310e58bb06df10c0a8bcfa</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8cbfa61cb2b025b16b04a8e470422960</td>\n",
        "      <td>1. One Box</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.0218</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>3.45</td>\n",
+       "      <td>0.025506</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>175</td>\n",
-       "      <td>a9eac4d5476d2f20a263becdc89ca829</td>\n",
+       "      <td>3</td>\n",
+       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
        "      <td>1. One Box</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2.8340</td>\n",
+       "      <td>39.80</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>176</td>\n",
-       "      <td>ab8c358afd1e639192d0abb1c5c0c9cb</td>\n",
+       "      <td>4</td>\n",
+       "      <td>c6262795f034865c9e9203305638ee79</td>\n",
        "      <td>1. One Box</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.0805</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -300,96 +300,96 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2495</td>\n",
-       "      <td>b7b6a911ecb48add616af2d2546f77de</td>\n",
+       "      <td>92</td>\n",
+       "      <td>c6262795f034865c9e9203305638ee79</td>\n",
        "      <td>Bear Market</td>\n",
        "      <td>30.0</td>\n",
        "      <td>inf</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2496</td>\n",
-       "      <td>b8f38a202d7b62fad5756326e758ab2b</td>\n",
-       "      <td>Bear Market</td>\n",
-       "      <td>30.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2497</td>\n",
-       "      <td>bac28f12fa9332df145bc5950d29c5d4</td>\n",
+       "      <td>91</td>\n",
+       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
        "      <td>Bear Market</td>\n",
        "      <td>30.0</td>\n",
        "      <td>inf</td>\n",
        "      <td>inf</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2488</td>\n",
-       "      <td>a6f176cf29c7a3e3bf3fc3c2362ac8c8</td>\n",
+       "      <td>90</td>\n",
+       "      <td>8cbfa61cb2b025b16b04a8e470422960</td>\n",
+       "      <td>Bear Market</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>8.4600</td>\n",
+       "      <td>214.71</td>\n",
+       "      <td>99.66</td>\n",
+       "      <td>92.86</td>\n",
+       "      <td>0.965443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>88</td>\n",
+       "      <td>4fe25833f555e9903d2bb6bbeec3fbfb</td>\n",
        "      <td>Bear Market</td>\n",
        "      <td>30.0</td>\n",
        "      <td>inf</td>\n",
        "      <td>inf</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2460</td>\n",
-       "      <td>5724b11c82858d1aa6e80f800fda71df</td>\n",
+       "      <td>93</td>\n",
+       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
        "      <td>Bear Market</td>\n",
        "      <td>30.0</td>\n",
        "      <td>inf</td>\n",
        "      <td>inf</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4388 rows × 8 columns</p>\n",
+       "<p>216 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 group      task_id  order  completed_time  \\\n",
-       "0     00f86c5fc28e8d326cdae17ea97c7387   1. One Box    1.0            0.37   \n",
-       "173   a8d110698c69055de0f594ab2956dde2   1. One Box    1.0            1.13   \n",
-       "174   a9381a5d6b310e58bb06df10c0a8bcfa   1. One Box    1.0            0.53   \n",
-       "175   a9eac4d5476d2f20a263becdc89ca829   1. One Box    1.0            0.27   \n",
-       "176   ab8c358afd1e639192d0abb1c5c0c9cb   1. One Box    1.0            0.43   \n",
-       "...                                ...          ...    ...             ...   \n",
-       "2495  b7b6a911ecb48add616af2d2546f77de  Bear Market   30.0             inf   \n",
-       "2496  b8f38a202d7b62fad5756326e758ab2b  Bear Market   30.0             NaN   \n",
-       "2497  bac28f12fa9332df145bc5950d29c5d4  Bear Market   30.0             inf   \n",
-       "2488  a6f176cf29c7a3e3bf3fc3c2362ac8c8  Bear Market   30.0             inf   \n",
-       "2460  5724b11c82858d1aa6e80f800fda71df  Bear Market   30.0             inf   \n",
+       "                               group      task_id  order  completed_time  \\\n",
+       "0   4fe25833f555e9903d2bb6bbeec3fbfb   1. One Box    1.0          0.0364   \n",
+       "1   7a01ab37bd2729626dcaf96166390315   1. One Box    1.0          0.0211   \n",
+       "2   8cbfa61cb2b025b16b04a8e470422960   1. One Box    1.0          0.0218   \n",
+       "3   95cd1f045a0329cf5595ae734ae7ae43   1. One Box    1.0          2.8340   \n",
+       "4   c6262795f034865c9e9203305638ee79   1. One Box    1.0          0.0805   \n",
+       "..                               ...          ...    ...             ...   \n",
+       "92  c6262795f034865c9e9203305638ee79  Bear Market   30.0             inf   \n",
+       "91  95cd1f045a0329cf5595ae734ae7ae43  Bear Market   30.0             inf   \n",
+       "90  8cbfa61cb2b025b16b04a8e470422960  Bear Market   30.0          8.4600   \n",
+       "88  4fe25833f555e9903d2bb6bbeec3fbfb  Bear Market   30.0             inf   \n",
+       "93  cb71040b5bd1341a34afc24961536ebd  Bear Market   30.0             inf   \n",
        "\n",
-       "      actions_completed  p_incorrect  p_abandoned  norm_all_measures  \n",
-       "0                   7.0          0.0          0.0                0.0  \n",
-       "173                34.0          0.0          0.0                0.0  \n",
-       "174                 3.0          0.0          0.0                0.0  \n",
-       "175                 3.0          0.0          0.0                0.0  \n",
-       "176                 3.0          0.0          0.0                0.0  \n",
-       "...                 ...          ...          ...                ...  \n",
-       "2495                inf        100.0        100.0                1.0  \n",
-       "2496                NaN        100.0        100.0                1.0  \n",
-       "2497                inf        100.0        100.0                1.0  \n",
-       "2488                inf        100.0        100.0                1.0  \n",
-       "2460                inf        100.0        100.0                1.0  \n",
+       "    actions_completed  p_incorrect  p_abandoned  norm_all_measures  \n",
+       "0                0.57         0.00         5.71           0.026163  \n",
+       "1                0.41         4.32         0.00           0.023406  \n",
+       "2                0.35         1.79         3.45           0.025506  \n",
+       "3               39.80         0.00         0.00           0.000000  \n",
+       "4                1.44         0.00         0.00           0.000000  \n",
+       "..                ...          ...          ...                ...  \n",
+       "92                NaN       100.00       100.00           1.000000  \n",
+       "91                inf       100.00       100.00           1.000000  \n",
+       "90             214.71        99.66        92.86           0.965443  \n",
+       "88                inf       100.00       100.00           1.000000  \n",
+       "93                inf       100.00       100.00           1.000000  \n",
        "\n",
-       "[4388 rows x 8 columns]"
+       "[216 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
